--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section id="main_content">
 
-<p>This user script utilizes the API at <a href="https://hn.algolia.com/api">https://hn.algolia.com/api</a> to determine whether similar URLs have been submitted to <a href="https://news.ycombinator.com/">Hacker News</a> within the past year. It is a work in progress.</p>
+<p>This user script utilizes the API at <a href="https://hn.algolia.com/api">https://hn.algolia.com/api</a> to determine whether similar URLs have been submitted to <a href="https://news.ycombinator.com/">Hacker News</a> within the past year. It requires ECMAScript 2015.</p>
         </section>
 
         <footer>
